--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@develoka/angka-rupiah-js": "^1.0.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tabler/icons-react": "^2.40.0",
     "@types/react-redux": "^7.1.30",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
