--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL= http://localhost:8080
-REACT_APP_IMAGE_URL = 
+VITE_APP_API_BASE_URL= http://localhost:8080
+VITE_APP_IMAGE_URL = http://localhost:8080/uploads
