--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
