--- a/package.json
+++ b/package.json
@@ -11,23 +11,34 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@develoka/angka-rupiah-js": "^1.0.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@faker-js/faker": "^8.3.1",
     "@tabler/icons-react": "^2.40.0",
     "@types/react-redux": "^7.1.30",
     "axios": "^1.6.1",
+    "chart.js": "^4.4.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
+    "pdfmake": "^0.2.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.9.3",
     "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
