--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
       "target": "ES2020",
       "module": "CommonJS",
-      "esModuleInterop": true
+      "esModuleInterop": true,
+        "composite" : true,
     },
     "include": ["src"]
   }
